--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
       <!-- Card Template -->
       <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 overflow-hidden">
         <div class="aspect-w-16 aspect-h-9">
-          <img src="/home/meatyfungus/violet/01.jpg" alt="Classroom fun" class="object-cover w-full h-full" />
+          <img src="01.jpg" alt="Classroom fun" class="object-cover w-full h-full" />
         </div>
         <div class="p-4">
           <p class="text-sm">Bright and engaging classrooms designed to inspire learning.</p>
@@ -392,7 +392,7 @@
 
       <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 overflow-hidden">
         <div class="aspect-w-16 aspect-h-9">
-          <img src="/home/meatyfungus/violet/02.jpg" alt="Creative activities" class="object-cover w-full h-full" />
+          <img src="02.jpg" alt="Creative activities" class="object-cover w-full h-full" />
         </div>
         <div class="p-4">
           <p class="text-sm">Hands-on activities that spark creativity and imagination.</p>
@@ -401,7 +401,7 @@
 
       <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 overflow-hidden">
         <div class="aspect-w-16 aspect-h-9">
-          <img src="/home/meatyfungus/violet/03.jpg" alt="Festive celebrations" class="object-cover w-full h-full" />
+          <img src="03.jpg" alt="Festive celebrations" class="object-cover w-full h-full" />
         </div>
         <div class="p-4">
           <p class="text-sm">Celebrations and cultural events that bring joy and learning together.</p>
@@ -410,7 +410,7 @@
 
       <div class="bg-white rounded-2xl shadow-lg hover:shadow-2xl transition duration-300 overflow-hidden">
         <div class="aspect-w-16 aspect-h-9">
-          <img src="/home/meatyfungus/violet/04.jpg" alt="Teamwork in action" class="object-cover w-full h-full" />
+          <img src="04.jpg" alt="Teamwork in action" class="object-cover w-full h-full" />
         </div>
         <div class="p-4">
           <p class="text-sm">Teamwork in action.</p>
