--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 <body>
   <header>
-    <img src="C:\Users\esthe\OneDrive\Desktop\Files\Skill\STRATEGYM_INTERNSHIP\VO_W\LOGO.jpg" alt="Violets' Orchids Logo">
+    <img src="05.jpeg">
     
     <div class="right-section">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScsElrZPlCAl966w6df7Cufj1A9N1cOP0r419t50KQuoV6s8Q/viewform?usp=header" target="_blank" class="enquiry-btn">Admission Enquiry</a>
