--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <nav id="mobileMenu" class="slide-toggle absolute top-[70px] right-4 bg-white rounded-md shadow-md z-50 w-64 flex-col gap-2 hidden md:hidden">
   <a href="#hero">Home</a>
   <a href="#why-choose">Why choose Violet Orchids?</a>
-  <a href="#programmes">Our Programs</a>
+  <a href="#programs">Our Programs</a>
   <a href="#gallery">Gallery</a>
   <a href="#purpose">Our Mission</a>
   <a href="#reviews">Testimonials</a>
@@ -607,7 +607,7 @@
     <div class="footer-menu">
       <a href="#hero">Home</a>
       <a href="#why-choose">What sets us apart?</a>
-      <a href="#programmes">What do we offer?</a>
+      <a href="#programs">What do we offer?</a>
       <a href="#gallery">Gallery</a>
       <a href="#purpose">Our Mission</a>
       <a href="#reviews">Testimonials</a>
