--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ footer {
   <div class="floating-shapes"></div>
   
   <header>
-    <img src="C:\Users\esthe\OneDrive\Desktop\Files\Skill\STRATEGYM_INTERNSHIP\VO_W\violet-orchids\05.jpg">
+    <img src="05.jpg">
     
     <div class="right-section">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScsElrZPlCAl966w6df7Cufj1A9N1cOP0r419t50KQuoV6s8Q/viewform?usp=header" target="_blank" class="enquiry-btn">Admission Enquiry</a>
@@ -906,7 +906,7 @@ footer {
              target="_blank" 
              rel="noopener noreferrer"
              class="block overflow-hidden rounded-2xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-[1.02]">
-            <img src="C:\Users\esthe\OneDrive\Desktop\Files\Skill\STRATEGYM_INTERNSHIP\VO_W\violet-orchids\06.jpg"
+            <img src="06.png"
                  alt="Violet Orchids Preschool Location" 
                  class="w-full h-auto">
             <div class="bg-white p-4 text-center">
