--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ footer {
   <div class="floating-shapes"></div>
   
   <header>
-    <img src="05.jpg">
+    <img src="05.jpeg">
     
     <div class="right-section">
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScsElrZPlCAl966w6df7Cufj1A9N1cOP0r419t50KQuoV6s8Q/viewform?usp=header" target="_blank" class="enquiry-btn">Admission Enquiry</a>
